2011-03-14  Balazs Kelemen  <kbalazs@webkit.org>

        Reviewed by Adam Roben.

        [Qt][WK2]Unbreak InjectedBundle on Qt
        https://bugs.webkit.org/show_bug.cgi?id=54109

        Add API's to WKURL and WKString to satisfy
        WebKitTestRunner's needs.

        * Shared/API/c/WKString.cpp:
        (WKStringIsEqualToUTF8CStringIgnoringCase):
        * Shared/API/c/WKString.h:
        * Shared/API/c/WKURL.cpp:
        (WKURLCopyHostName):
        (WKURLCopyScheme):
        * Shared/API/c/WKURL.h:
        * Shared/WebString.h:
        (WebKit::WebString::equalToUTF8StringIgnoringCase):
        * Shared/WebURL.h: Added OwnPtr<KURL> member to be able
        to lazily parse the URL and store the result.
        (WebKit::WebURL::host):
        (WebKit::WebURL::protocol):
        (WebKit::WebURL::parseURLIfNecessary):
        * win/WebKit2.def: Revert the symbol exports that were
        needed to use KURL in WebKitTestRunner.

2011-03-14  Jeff Miller  <jeffm@apple.com>

        Reviewed by Adam Roben.

        Add WKViewSetScrollOffsetOnNextResize() to C API on Windows
        https://bugs.webkit.org/show_bug.cgi?id=56340

        * UIProcess/API/C/win/WKView.cpp:
        (WKViewSetScrollOffsetOnNextResize): Added.
        * UIProcess/API/C/win/WKView.h: Added WKViewSetScrollOffsetOnNextResize().
        * UIProcess/win/WebView.cpp:
        (WebKit::WebView::onSizeEvent): Apply any scroll offset when setting the drawing area size.
        (WebKit::WebView::setScrollOffsetOnNextResize): Added.
        * UIProcess/win/WebView.h: Added setScrollOffsetOnNextResize().

2011-03-14  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Adam Roben and Gavin Barraclough.

        FileSystemWin.cpp needs listDirectory() implementation
        https://bugs.webkit.org/show_bug.cgi?id=56331
        <rdar://problem/9126635>
        
        Move PathWalker down into WebCore, and call the PathWalker in WebCore